--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "./chat-app/",
+  "start_url": "https://www.mattjlowe.com/chat-app/index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
